# kuka-reach-drl

./: .gitignore  README.md  eval.py  eval_with_cnn.py  eval_with_mlp.py  requirements.txt  test_cnn_policy.py  train.py  train_cam_reach.py  train_cam_reach_with_cnn.py  train_with_cnn.py  train_with_lstm.py  train_with_mlp.py
custom_envs/: kuka_cam_reach.py  kuka_reach_env.py
docker/: dockerfile
docs/: Reinforcement Learning.md  deep_learning.md  pybullet.md  python.md  robotics.md  vscode.md
env/: diana_cam_reach.py  kuka_base_env.py  kuka_cam_gripper_reach_env.py  kuka_cam_reach.py  kuka_grasp_env.py  kuka_gripper_reach_env.py  kuka_reach_env.py
models/diana/dianaS1_description/: package.xml  urdf.rviz
models/diana/dianaS1_description/config/: joint_names_DianaS1.yaml
models/diana/dianaS1_description/launch/: DianaS1_upload.launch
models/diana/dianaS1_description/meshes/: link2.STL  link4.STL  link5.STL  link6.STL  link7.STL
models/diana/dianaS1_description/urdf/: Diana.transmission.xacro  DianaS1.urdf.xacro  DianaS1_joint_limited_robot.urdf.xacro  DianaS1_joint_limited_torque_robot.urdf.xacro  DianaS1_joint_torque_robot.urdf.xacro  DianaS1_robot.urdf.xacro
pictures/: 2021-05-10 17-01-14.mkv
ppo/: core.py  core_cnn.py  core_cnn_cuda.py  core_lstm.py  logx.py  ppo.py  ppo_cnn.py  ppo_cnn_cuda.py  ppo_lstm.py
test/: diana_with_slidebar.py  rllib_with_atari.py  rllib_with_dqn.py  slide_bar_for_camera.py  test_actor.py  test_atari.py  test_c++  test_c++.cpp  test_cnn_policy.py  test_critic.py  test_diana.py  test_kuka.py  test_kuka_with_slidebar.py  (+5 more)
(+34 files in other folders)
