<package format="2">
  <name>dianaS1_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for DianaS1</p>
    <p>This package contains configuration data, 3D models and launch files
for DianaV1 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
